--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-init",
-  "version": "0.0.0",
-  "private": true,
+  "name": "max-init",
+  "version": "1.0.0",
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "install" : "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "vue": "^3.5.12"
